--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -1,4 +1,5 @@
 .features {
+  margin-bottom: 68px;
   padding-top: 60px;
 
   @include viewport--md {
